--- a/ms-config-properties/ms-user/prod/ms-user.yml
+++ b/ms-config-properties/ms-user/prod/ms-user.yml
@@ -6,7 +6,11 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     username: sa
-    password:
+    password:    
+kafka:
+    bootstrap-servers: localhost:9092
+    topic:
+      userCreated: USER_CREATED_TOPIC
 security:
   basic:
     enabled: false
